--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,19 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
+  csv: ^5.1.1
   finance_updated: ^0.1.0
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: ^0.19.0
   ml_dataframe: ^1.6.0
   ml_linalg: ^13.12.6
+  provider: ^6.1.2
+  shared_preferences: ^2.3.0
+  undo: ^1.5.0
 
 dev_dependencies:
   flutter_test:
