--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "rent_vs_buy",
+    "name": "Rent vs. Buy",
     "short_name": "rent_vs_buy",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Rent vs buy calculator.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
